--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -2,15 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
-
-        {% block javascripts %}
-        {% endblock %}
+        <title>TPAirbeb - {% block title %} Welcome! {% endblock %}</title>
+        <link rel="stylesheet" href="/css/bootsrap.min.css">
+        <link rel="stylesheet" href="/css/app.css">
+        {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        {% include 'partials/header.html.twig' %}
         {% block body %}{% endblock %}
+        {% include 'partials/footer.html.twig' %}
+        <script src="/js/bootstrap.min.js"></script>
+        {% block javascripts %}{% endblock %}
     </body>
 </html>
