adding annonces view/searchbar and css @media for annonces

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -8,9 +8,9 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% include 'partials/header.html.twig' %}
+        {% include 'partiels/header.html.twig' %}
         {% block body %}{% endblock %}
-        {% include 'partials/footer.html.twig' %}
+        {% include 'partiels/footer.html.twig' %}
         <script src="/js/bootstrap.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
