--- a/app/templates/home/home.html.twig
+++ b/app/templates/home/home.html.twig
@@ -10,9 +10,26 @@
       <h1 class="display-3">Explorez le monde avec Airbeb</h1>
       <p class="lead">Airbeb révolutionne le voyage en offrant une plateforme facile d'utilisation pour réserver des hébergements uniques et des expériences mémorables partout sur la planète. </p>
       <hr class="my-4">
-      <p class="lead">
-         <a class="btn btn-primary btn-lg" href="/ads" role="button">Découvrez nos offres</a>
-      </p>
+    
+      <div class="bar">
+         <div class="location">
+            <p>Location</p>
+            <input type="text" placeholder="Where are you going?">
+         </div>
+         <div class="check-in">
+            <p>Check in</p>
+            <input type="text" placeholder="Add dates">
+         </div>
+         <div class="check-out">
+            <p>Check out</p>
+            <input type="text" placeholder="Add dates">
+         </div>
+         <div class="guests">
+            <p>Guests</p>
+            <input type="text" placeholder="Add guests">
+            <span><i class="lni lni-search-alt"></i></span>
+         </div>
+      </div>
    </div>
    <h2 class="h1 mt-5 mb-4">Sélection de logements haut de gamme</h2>
    <div class="row mt-5">
