--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -1,7 +1,104 @@
-div.container{
-    margin-top: 20px;
+
+
+/* Navbar */
+*{
+    box-sizing:border-box;
+    margin:0;
+    padding:0;
 }
 
+.bar{
+    width:650px;
+    background:white;
+    box-shadow:0 0 5px hsl(0 0% 78%);
+    height:55px;
+    border-radius:100vw;
+    display:flex;
+    justify-content:center;
+    font-size:0.6rem;
+}
+
+@media screen and (min-width:992px){
+    .bar{
+        width:100%;
+    }
+    
+}
+
+.bar div{
+    border-radius:inherit;
+    padding:3px 24px;
+    transition:background 250ms ease;
+}
+
+.bar div:hover{
+    background:hsl(0 0% 94%);
+}
+
+.location{
+    width:34%;
+}
+
+.check-in, .check-out, .guests{
+    width:22%;
+}
+
+input[type="text"]{
+    background:none;
+    border:none;
+    padding:0.1rem 0 0 0;
+}
+
+input[type="text"]:focus{
+    outline:none;
+}
+
+::placeholder{
+    font-size:0.75rem;
+}
+
+.guests{
+    position: relative;  
+}
+.guests span{
+    position:absolute;
+    top:50%;
+    right:10px;
+    transform:translateY(-50%);
+    background:#FF385C;
+    color:white;
+    font-size:0.8rem;
+    padding:0.7rem;
+    border-radius:50%;
+    }
+
+/* pipe between */
+.bar>div{
+    position:relative;
+}
+
+.bar>div::before{
+    position:absolute;
+    content:"";
+    left:0;
+    top:50%;
+    transform:translateY(-50%);
+    width:1px;
+    height:55%;
+    background:hsl(0 0% 90%);
+}
+
+.bar>div:nth-of-type(1)::before{
+    background:transparent;
+}
+
+
+.bar>div:hover::before{
+    background:transparent;
+}
+
+/* Avatar for accounts */
+/*
 div.my-title{
     padding: 2em;
     background-size: cover;
@@ -27,4 +124,4 @@ div.my-title h1, div.my-title p {
 .avatar-mini {
     max-width: 24px;
     max-height: 24px;
-}
+} */
