--- a/app/templates/partiels/header.html.twig
+++ b/app/templates/partiels/header.html.twig
@@ -10,7 +10,7 @@
             <a class="nav-link" href="{{ path('accueil') }}">Accueil</a>
          </li>
          <li class="nav-item">
-            <a class="nav-link" href="{{ path('accueil') }}">Annonces</a>
+            <a class="nav-link" href="{{ path('annonces') }}">Annonces</a>
          </li>
       </ul>
       <ul class="navbar-nav ml-auto">
