--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -12,6 +12,7 @@
         {% block body %}{% endblock %}
         {% include 'partiels/footer.html.twig' %}
         <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/popper.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
