--- a/app/templates/home/home.html.twig
+++ b/app/templates/home/home.html.twig
@@ -14,19 +14,19 @@
       <div class="bar">
          <div class="location">
             <p>Location</p>
-            <input type="text" placeholder="Where are you going?">
+            <input type="texta" placeholder="Where are you going?">
          </div>
          <div class="check-in">
             <p>Check in</p>
-            <input type="text" placeholder="Add dates">
+            <input type="texta" placeholder="Add dates">
          </div>
          <div class="check-out">
             <p>Check out</p>
-            <input type="text" placeholder="Add dates">
+            <input type="texta" placeholder="Add dates">
          </div>
          <div class="guests">
             <p>Guests</p>
-            <input type="text" placeholder="Add guests">
+            <input type="texta" placeholder="Add guests">
             <span><i class="lni lni-search-alt"></i></span>
          </div>
       </div>
