--- a/app/templates/partiels/header.html.twig
+++ b/app/templates/partiels/header.html.twig
@@ -1,4 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+   <style>
+      /* Style des pipes */
+      .pipe::before {
+         content: "|";
+         margin: 0 8px; /* Ajustez la marge selon vos préférences */
+         color: #ffffff; /* Couleur des pipes */
+      }
+   </style>
    <a class="navbar-brand" href="{{ path('accueil') }}">Airbeb</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" 
    data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,27 +23,25 @@
       </ul>
       <ul class="navbar-nav ml-auto">
          {% if app.user %}
-         <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
-            <img src="{{ app.user.picture }}" class="avatar avatar-mini" 
-            alt="Avatar de {{ app.user.fullName }}"> {{ app.user.fullName }}
-            </a>
+         <li class="">
+            
             {# TODO: ajouter le form insription et login / si connecté dropdown sinon inscription #}
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
-               <a href="{{ path('accueil') }}" class="dropdown-item">Créer une annonce</a>
-               <div class="dropdown-divider"></div>
-               <a href="{{ path('accueil') }}" class="dropdown-item">Mon compte</a>
-               <a href="{{ path('accueil') }}" class="dropdown-item">Modifier mon profil</a>
-               <div class="dropdown-divider"></div>
-               <a href="{{ path('accueil') }}" class="dropdown-item">Déconnexion</a>
+            <div>
+               <a href="{{ path('accueil') }}" class="">Créer une annonce</a>
+               <span class="pipe"></span>
+               <a href="{{ path('accueil') }}" class="">Mon compte</a>
+               <span class="pipe"></span>
+               <a href="{{ path('accueil') }}" class="">Modifier mon profil</a>
+               <span class="pipe"></span>
+               <a href="{{ path('app_logout') }}" class="">Déconnexion</a>
             </div>
          </li>
          {% else %}
          <li class="nav-item">
-            <a href="{{ path('accueil') }}" class="nav-link">Inscription</a>
+            <a href="{{ path('app_register') }}" class="nav-link">Inscription</a>
          </li>
          <li class="nav-item">
-            <a href="{{ path('accueil') }}" class="nav-link">Connexion</a>
+            <a href="{{ path('app_login') }}" class="nav-link">Connexion</a>
          </li>
          {% endif %}
       </ul>
