--- a/app/templates/annonce/show.html.twig
+++ b/app/templates/annonce/show.html.twig
@@ -58,7 +58,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_annonce_index') }}">back to list</a>
+    <a href="{{ path('app_annonce_index') }}" class="text-primary">Click me to go back to the list</a>
 
     <a href="{{ path('app_annonce_edit', {'id': annonce.id}) }}">edit</a>
 
