--- a/app/templates/annonce/show.html.twig
+++ b/app/templates/annonce/show.html.twig
@@ -32,35 +32,54 @@
                 <td>{{ annonce.streetname }}</td>
             </tr>
             <tr>
-                <th>Image_path</th>
+                <th>Image</th>
                 <td>{{ annonce.imagePath }}</td>
             </tr>
             <tr>
-                <th>Image_slug</th>
-                <td>{{ annonce.imageSlug }}</td>
+                <th>Prix par nuit</th>
+                <td>{{ annonce.prix }} €</td>
             </tr>
             <tr>
-                <th>Prix</th>
-                <td>{{ annonce.prix }}</td>
-            </tr>
-            <tr>
-                <th>Nombre_couchage</th>
+                <th>Nombre de couchages</th>
                 <td>{{ annonce.nombreCouchage }}</td>
             </tr>
             <tr>
-                <th>Nombre_piece</th>
+                <th>Nombre de pieces</th>
                 <td>{{ annonce.nombrePiece }}</td>
             </tr>
             <tr>
-                <th>Taille</th>
+                <th>Taille en m²</th>
                 <td>{{ annonce.taille }}</td>
+            </tr>
+            <tr>
+                <th>Autheur</th>
+                <td>{{ annonce.user.email }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_annonce_index') }}" class="text-primary">Click me to go back to the list</a>
-    <span class="pipe"></span>
-    <a href="{{ path('app_annonce_edit', {'id': annonce.id}) }}" class="text-primary">edit</a>
 
-    {{ include('annonce/_delete_form.html.twig') }}
+    {# TODO: Button for ROLE_AUTHOR #}
+
+    {# Ici, on vérifie si l'utilisateur a le rôle ADMIN #}
+    {% if is_granted('ROLE_ADMIN') %}
+        <div class="d-flex justify-content-center">
+            <a href="{{ path('app_annonce_index') }}" class="btn btn-primary mr-5">Faire une réservation</a>
+            <a href="{{ path('app_annonce_index') }}" class="btn btn-primary mr-5 ">Click pour retourner a la liste</a>
+            <a href="{{ path('app_annonce_edit', {'id': annonce.id}) }}" class="btn btn-primary ml-2 bg-success">Edit</a>
+            {{ include('annonce/_delete_form.html.twig') }}
+        </div>
+
+    {% else %}
+
+    <div class="d-flex justify-content-center">
+        {# TODO: crud reservation and update the commented line  #}
+        {# <a href="{{ path('app_reservation_new', {'id': annonce.id}) }}" class="btn btn-primary">Make a reservation</a> #}
+        <a href="{{ path('app_annonce_index') }}" class="btn btn-primary mr-2">Faire une réservation</a>
+        <a href="{{ path('app_annonce_index') }}" class="btn btn-primary mr-2">Click moi pour retourner a la liste</a>
+    </div>
+
+   {% endif %}
+
+  
 {% endblock %}
