--- a/app/templates/annonce/edit.html.twig
+++ b/app/templates/annonce/edit.html.twig
@@ -5,9 +5,14 @@
 {% block body %}
     <h1>Edit Annonce</h1>
 
-    {{ include('annonce/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('annonce/_form.html.twig') }}
 
-    <a href="{{ path('app_annonce_index') }}" class="text-primary">back to list</a>
-
-    {{ include('annonce/_delete_form.html.twig') }}
+   
+    <div class="d-flex justify-content-center mt-4">
+        <a href="{{ path('app_annonce_index') }}" class="btn bg-primary">back to list</a>
+        <form method="post" action="{{ path('app_annonce_delete', {'id': annonce.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ annonce.id) }}">
+            <button class="btn btn-primary ml-4 bg-danger">Delete</button>
+        </form>
+    </div>
 {% endblock %}
