--- a/app/templates/annonce/new.html.twig
+++ b/app/templates/annonce/new.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}New Annonce{% endblock %}
 
 {% block body %}
@@ -7,5 +8,7 @@
 
     {{ include('annonce/_form.html.twig') }}
 
-    <a href="{{ path('app_annonce_index') }}" class="text-primary">back to list</a>
+    <div class="d-flex justify-content-center mt-4">
+        <a href="{{ path('app_annonce_index') }}" class="btn bg-primary">back to list</a>
+    </div>
 {% endblock %}
