--- a/app/templates/annonce/cards.html.twig
+++ b/app/templates/annonce/cards.html.twig
@@ -1,4 +1,4 @@
-<div class="card " style="width: 18rem;">
+<div class="card mx-3 my-3" style="width: 18rem;">
   <img src="images/uploads/{{ annonce.imagePath }}" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{ annonce.title }}</h5>
