--- a/app/templates/partiels/header.html.twig
+++ b/app/templates/partiels/header.html.twig
@@ -2,14 +2,14 @@
    <style>
       /* Style des pipes */
       .pipe::before {
-         content: "|";
-         margin: 0 8px; /* Ajustez la marge selon vos préférences */
-         color: #ffffff; /* Couleur des pipes */
+      content: "|";
+      margin: 0 8px; /* Ajustez la marge selon vos préférences */
+      color: #ffffff; /* Couleur des pipes */
       }
    </style>
    <a class="navbar-brand" href="{{ path('accueil') }}">Airbeb</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" 
-   data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
    </button>
    <div class="collapse navbar-collapse" id="navbarColor01">
@@ -24,17 +24,17 @@
       <ul class="navbar-nav ml-auto">
          {% if app.user %}
          <li class="">
-            
-            {# TODO: ajouter le form insription et login / si connecté dropdown sinon inscription #}
             <div>
+               {# Bouton pour devenir auteur, si l'utilisateur n'est pas déjà auteur #}
+               {#{% if not is_granted('ROLE_AUTHOR') %}
+                route pour devenir auteur 
+               <a href="{{ path('app_annonce_index') }}" >Devenir Annonceur</a>
+               <span class="pipe"></span>
+               {% endif %}#}
                <a href="{{ path('app_annonce_new') }}" class="">Créer une annonce</a>
                <span class="pipe"></span>
                <a href="{{ path('profile') }}" class="">Mon compte</a>
                <span class="pipe"></span>
-             
-
-
-
                <a href="{{ path('app_logout') }}" class="">Déconnexion</a>
             </div>
          </li>
