--- a/app/templates/registration/register.html.twig
+++ b/app/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1 class="h3 mb-3 font-weight-normal">Register</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Inscription</h1>
 
     {{ form_errors(registrationForm) }}
 
@@ -11,8 +11,10 @@
         {{ form_row(registrationForm.name) }}
         {{ form_row(registrationForm.firstname) }}
         {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.registerAsAuthor,{ 
+            label: 'Inscription en tant qu\'annonceur' }) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Mot de passe'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
