--- a/app/templates/reservation/edit.html.twig
+++ b/app/templates/reservation/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Reservation</h1>
 
-    {{ include('reservation/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('reservation/_form.html.twig') }}
 
-    <a href="{{ path('app_reservation_index') }}">back to list</a>
+    <a href="{{ path('app_reservation_index') }}" class="btn bg-primary ">back to list</a>
 
     {{ include('reservation/_delete_form.html.twig') }}
 {% endblock %}
