--- a/app/templates/reservation/index.html.twig
+++ b/app/templates/reservation/index.html.twig
@@ -24,9 +24,9 @@
                 <td>{{ reservation.dateFin ? reservation.dateFin|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ reservation.hasAnimal ? 'Yes' : 'No' }}</td>
                 <td>{{ reservation.status }}</td>
-                <td class="d-flex bg-success">
-                    <a class="bg-secondary" href="{{ path('app_reservation_show', {'id': reservation.id}) }}">show</a>
-                    <a class="bg-primary" href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">edit</a>
+                <td class="d-flex ">
+                    <a class="btn bg-primary mr-4" href="{{ path('app_reservation_show', {'id': reservation.id}) }}">show</a>
+                    <a class="btn bg-primary" href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -37,5 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_reservation_new') }}">Create new</a>
+
 {% endblock %}
