end of all required functionnalities/ Bonus and security now

--- a/app/templates/reservation/indexauth.html.twig
+++ b/app/templates/reservation/indexauth.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Reservation index{% endblock %}
 
 {% block body %}
-    <h1>Mes Réservations</h1>
+    <h1>Reservation des utilisateurs</h1>
 
     <table class="table">
         <thead>
