--- a/app/templates/partiels/header.html.twig
+++ b/app/templates/partiels/header.html.twig
@@ -27,12 +27,17 @@
             <div>
                {# Bouton pour creer une annonce ##}
                {% if is_granted('ROLE_AUTHOR') %} 
-               <a href="{{ path('app_annonce_new') }}" class="">Créer une annonce</a>
+               <a href="{{ path('app_annonce_new') }}" class="">Créer annonce</a>
                <span class="pipe"></span>
-               <a href="{{ path('app_reservation_index') }}" class="">Voir mes réservations</a>
+               {# reservations author #}
+               <a href="{{ path('app_reservation_index') }}" class="">Reservation des users</a>
                <span class="pipe"></span>
                {% endif %}
-               <a href="{{ path('profile') }}" class="">Mon compte</a>
+               {# reservations user #}
+               <a href="{{ path('app_reservation_index_user') }}" class="">Voir mes réservations</a>
+               <span class="pipe"></span>
+               <a href="{{ path('profile') }}" class="">Mon compte et annonces</a>
+              
                <span class="pipe"></span>
                <a href="{{ path('app_logout') }}" class="">Déconnexion</a>
             </div>
