--- a/app/templates/reservation/show.html.twig
+++ b/app/templates/reservation/show.html.twig
@@ -30,7 +30,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_reservation_index') }}" class="btn btn-primary ml-4 bg-primary">back to list</a>
+    <a href="{{ path('app_reservation_index_user') }}" class="btn btn-primary ml-4 bg-primary">back to list</a>
 
     <a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}" class="btn btn-primary ml-4 bg-success">edit</a>
 
