--- a/app/templates/partiels/header.html.twig
+++ b/app/templates/partiels/header.html.twig
@@ -36,7 +36,7 @@
                {# reservations user #}
                <a href="{{ path('app_reservation_index_user') }}" class="">Voir mes réservations</a>
                <span class="pipe"></span>
-               <a href="{{ path('profile') }}" class="">Mon compte et annonces</a>
+               <a href="{{ path('profile') }}" class="">Mon compte et Mes annonces</a>
               
                <span class="pipe"></span>
                <a href="{{ path('app_logout') }}" class="">Déconnexion</a>
