--- a/app/templates/reservation/edit.html.twig
+++ b/app/templates/reservation/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('reservation/_form.html.twig') }}
 
-    <a href="{{ path('app_reservation_index') }}" class="btn bg-primary ">back to list</a>
+    <a href="{{ path('app_reservation_index_user') }}" class="btn bg-primary ">back to list</a>
 
     {{ include('reservation/_delete_form.html.twig') }}
 {% endblock %}
