--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>TPAirbeb - {% block title %} Welcome! {% endblock %}</title>
-        <link rel="stylesheet" href="/css/bootsrap.min.css">
+        <link rel="stylesheet" href="/css/bootsrap.min.css"> <!-- Not a typo, make my own bootstrap -->
         <link rel="stylesheet" href="/css/app.css">
         {% block stylesheets %}{% endblock %}
     </head>
@@ -11,8 +11,17 @@
         {% include 'partiels/header.html.twig' %}
         {% block body %}{% endblock %}
         {% include 'partiels/footer.html.twig' %}
+
+        <!-- Include jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+        <!-- Include Popper.js -->
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+
+        <!-- Include Bootstrap JavaScript -->
         <script src="/js/bootstrap.min.js"></script>
-        <script src="/js/popper.min.js"></script>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
+
