--- a/app/templates/partiels/header.html.twig
+++ b/app/templates/partiels/header.html.twig
@@ -37,7 +37,8 @@
                <a href="{{ path('app_reservation_index_user') }}" class="">Voir mes réservations</a>
                <span class="pipe"></span>
                <a href="{{ path('profile') }}" class="">Mon compte et Mes annonces</a>
-              
+               <span class="pipe"></span>
+               <a href="{{ path('app_favoris_index') }}" class="">Mes Favoris</a>
                <span class="pipe"></span>
                <a href="{{ path('app_logout') }}" class="">Déconnexion</a>
             </div>
